Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18214 modified error handling on xmlrpc when using xmlscript.

 o 18212 Replication: added replication.prioDeliveryOnInitial which allows to send high prio messages during initial phase 

 o 18210 XMLRPC fixed issue which leaded to a dead message instead of a Communication Exception when the client side callback driver was shutting down.

 o 18208 Modified the initializing handling of the xmlrcp Callack Driver
 
 o 18199 the property.keepUnresolvedProps has been added to inhibit throwing an exception if a
   dynamic property value could not be assigned 

 o 18185 Made parser a member variable based on Thierry Legrain's suggestion in SaxHandlerBase

 o 18193 Added fix for Java client side forced asynchronous mode

 o 18190 added lazyConnect configuration parameter to ClusterManager.

 o 18187-18189 Implmented asynchronous sending of xmlBlaster.get() calls
         The GET is put to client queue and asynchronously sent,
	 the response is returned sync, with a default timeout of 10 sec
	 You need to activate this behaviour with
 	   getQos.addClientProperty(GetQos.CP_ASYNC_GET_ALLOWED, true);
	   getQos.addClientProperty(GetQos.CP_ASYNC_GET_TIMEOUT_MILLIS, 10000);

 o 18185 UnSubscribeQos.CP_ASYNC_UNSUBSCRIBE_WITHOUT_SUBSCRIPTIONID_ALLOWED 
     and connectQos.setTrySyncMode(false) added to allow async client operation even if ALIVE

 o 18183 connectQos.setTrySyncMode() added
     to force client side queue always to async delivery
     Like this publishes are always locally queued and removed after server ACK

 o 18177  20154-08-27 StringPairTokenizer.java
          Changed semicolon ; escape to %3B, until 2014-08-27 it was %53

 o 18167  2014-06-24
          Added SubscribeQos ClientProperty __newestOnly
          If set __newestOnly=true, xmlBlaster throws away all other messages of this