@@ -4,6 +4,12 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
+ o 18216 Fixes for StringPairTokenizer
+   parseLine() no handles a single trailing quote " (at very end of line) correctly
+   -> return nothing instead of clone of complete line
+   CSVToMap() has new argument unescapeSeparatorChars which defaults to true
+   -> Unescapes depending on seperator eg "&comma;" is unescaped to "," or "%3B" to ";"
+
  o 18214 modified error handling on xmlrpc when using xmlscript.
 
  o 18212 Replication: added replication.prioDeliveryOnInitial which allows to send high prio messages during initial phase 
